--- a/zakupownik/src/common/styles/Columns.module.scss
+++ b/zakupownik/src/common/styles/Columns.module.scss
@@ -1,31 +1,32 @@
+$color-red: red;
+
 .App {
   text-align: center;
+  display: flex;
+  width: 50vw;
 }
 
-.App-logo {
+.AppLogo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .AppLogo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.AppHeader {
   background-color: #282c34;
-  min-height: 100vh;
+  height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  color: $color-red;
+  width: 100%;
 }
 
 @keyframes App-logo-spin {
