--- a/zakupownik2/src/common/styles/Columns.module.scss
+++ b/zakupownik2/src/common/styles/Columns.module.scss
@@ -18,20 +18,22 @@ $color-red: red;
 }
 
 .AppHeader {
+  background: lightgray;
+  height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
-  color: red;
+  color: $color-red;
   width: 100%;
   border: 1px solid black;
-  background: lightgray;
 }
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
